had to bring back main.css
the file was deleted and I have no idea how. I copied the old week 2
file to have some sort of baseline

--- a/css/main.css
+++ b/css/main.css
@@ -218,7 +218,7 @@ nav a:active {
 /*-------------------------- Start of Aside --------------------------*/
 
 aside {
-	width: 21.747572815534%; /* 14.000em / 64.375em */
+	width: 14.000em; /*21.747572815534%; /* 14.000em / 64.375em */
 	margin: 0.313em; /* 64.375em */
 	float: left;
 	background: rgba(225,172,2,0.3);
